--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     height: 100vh;
+    min-width: 460px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,12 +16,21 @@ body {
 
 .container {
     width: 90%;
-    height: 80%;
+    height: 70%;
     background-color: #333;
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.4);
+    position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+@media only screen and (max-width: 866px) {
+    .container .card {
+        margin: 30px 10px;
+    }
 }
 
 .card {
@@ -28,6 +38,10 @@ body {
     height: 250px;
     color: #fff;
     position: relative;
+}
+
+.card:hover {
+    z-index: 1000;
 }
 
 .card .cover {
@@ -43,8 +57,9 @@ body {
     row-gap: 15px;
     border-radius: 7px;
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.8);
-    z-index: 1000;
+    z-index: 100;
     transition: transform 300ms, box-shadow 300ms, border-radius 100ms, background-color 300ms;
+    overflow: hidden;
 }
 
 .card .cover i,
@@ -91,6 +106,7 @@ body {
     padding: 30px 20px;
     transition: transform 300ms;
     font-size: 20px;
+    overflow: hidden;
 }
 
 .card .content p {
@@ -110,7 +126,7 @@ body {
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.2);
     background-color: #fff;
     font-size: .6em;
-    z-index: 100;
+    z-index: 50;
     transition: color 300ms;
 }
 
